--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,22 @@
 body {
     font-family: Arial, sans-serif;
     text-align: center;
-    padding: 20px;
-    background-color: #f0f0f0;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 90vh;
 }
 .container {
-    max-width: 400px;
-    margin: 0 auto;
+    /* max-width: 400px; */
+    z-index: 100;
+    padding: 5px;
+    width: 90%;
+    max-width: 350px;
     background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    /* padding: 20px; */
+    border-radius: 20px;
+    box-shadow: 0px 0px 20px 10px rgba(174, 0, 255, 0.5);
 }
 .label {
     font-size: 24px;
@@ -19,10 +25,10 @@ body {
 .value {
     font-size: 48px;
     font-weight: bold;
-    color: #007bff;
+    color: #000000;
     margin-bottom: 10px;
 }
 .updated {
     font-size: 18px;
-    color: gray;
+    color: rgb(0, 0, 0);
 }
