--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 90vh;
+    overflow: hidden;
 }
 .container {
     /* max-width: 400px; */
