--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,8 @@ body {
     align-items: flex-start;
     /* min-height: calc(var(--vh, 1vh) * 100); */
     /* min-height: 100%; */
+    width: 100vw;
+    position: fixed;
     overflow-y: hidden;
     box-sizing: border-box;
 }
