--- a/styles.css
+++ b/styles.css
@@ -339,7 +339,7 @@ body {
 
     .container {
         max-width: 100%;
-        max-height: 94vh;
+        /* max-height: 100%; */
         padding: 20px;
         /* border-radius: 12px; */
     }
